--- a/css/Acme.css
+++ b/css/Acme.css
@@ -58,7 +58,7 @@ header a:hover{font-weight: bold;}
 /*showcase*/
 #showcase{
     min-height:400px;
-    background: url('laptop.jpg') no-repeat center;
+    background: url('laptop.webp') no-repeat center;
     background-size: cover;
     text-align: center;
     color: #ffff;
